# leica_gazebo_simulation

./: .travis.yml  CMakeLists.txt  README.md  package.xml  rosdoc.yaml
include/: laserscan_to_pointcloud.h  leica_plugin.h  leica_service_listener.h
launch/: c5_init.launch  c5_system_spawn.launch  laserscan_to_pointcloud.launch
meshes/: CAJON.stl  nut.stl  scanstation_c5.dae  scanstation_c5.stl  screw.stl  screwdriver.stl
plugin/: leica_plugin.cpp
scripts/: move_c5_pan.py  publish_tf.py
src/: laserscan_to_pointcloud.cpp  leica_service_listener.cpp
test/: test_laserscan_to_pointcloud.cpp  test_laserscan_to_pointcloud.test
urdf/: c5.urdf.xacro  sensor.urdf.xacro
worlds/: assembly_line.world
